--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -5,5 +5,6 @@
   <div class="card-ppsp">
     <%= link_to ppsp, ppsp_path(ppsp) %>
     <%= link_to "x", ppsp_path(ppsp), method: :delete  %>
+    <%= link_to "edit", edit_ppsp_path(ppsp)  %>
   </div>
 <% end %>
