Create models, policies and some views

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -6,11 +6,11 @@
   <%= f.input :end, label: "Date de fin"  %>
   <%= f.input :nature, label: "Nature du travail"  %>
   <%= f.input :workforce, label: "Workforce"  %>
-  <%= f.input :company_id, label: "Entreprise", as: :select, collection: Company.all.order(:name) %>
+  <%= f.input :company_id, label: "Entreprise", as: :select, collection: Company.all %>
   <% if policy(Company).new? %>
     <%= link_to "Ajouter une entreprise", new_company_path %>
   <% end %>
-  <%= f.input :moa_id, label: "MOA", as: :select, collection: Moa.all.order(:name) %>
+  <%= f.input :moa_id, label: "MOA", as: :select, collection: Moa.all.order(:name)  %>
   <% if policy(Moa).new? %>
     <%= link_to "Ajouter un MOA", new_moa_path %>
   <% end %>
@@ -18,9 +18,38 @@
   <% if policy(Moe).new? %>
     <%= link_to "Ajouter un MOE", new_mo_path %>
   <% end %>
-  <%= f.input :project_information_id, label: "Informations sur le projet", as: :select, collection: ProjectInformation.all.order(:reference) %>
+  <%= f.input :project_information_id, label: "Projet", as: :select, collection: ProjectInformation.all.order(:reference) %>
   <% if policy(Moe).new? %>
     <%= link_to "Ajouter un projet", new_project_information_path %>
   <% end %>
+  <%= f.input :agglomeration, label: "Agglomération", as: :select, collection: Ppsp::AGGLOMERATIONS %>
+  <%= f.input :street_impact, label: "Impact sur voirie", as: :select, collection: Ppsp::STREET_IMPACTS %>
+  <%= f.input :river_guidance, label: "Signalisation fluviale", as: :select, collection: Ppsp::RIVER_GUIDANCES %>
   <%= f.submit %>
 <% end %>
+
+<%
+=begin%>
+<div class="form-group select required ppsp_moa_id"> %>
+  <label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
+  <select class="form-control select required" name="ppsp[moa_id]" id="ppsp_moa_id">
+    <option value=""></option>
+    <% Moa.all.order(:name).each do |moa| %>
+      <option value=<%= moa.id %>><%= moa.name %> - <%= moa.phone %> </option>
+    <% end %>
+  </select>
+</div>
+
+
+<div class="form-group select required ppsp_project_information_id">
+  <label class="select required" for="ppsp_project_information_id">Projet <abbr title="required">*</abbr></label>
+  <select class="form-control select required" name="ppsp[project_information_id]" id="ppsp_project_information_id">
+    <option value=""></option>
+    <% ProjectInformation.all.order(:reference).each do |project| %>
+      <option value=<%= project.id %>><%= "#{project.reference} - #{project.responsible}" %></option>
+    <% end %>
+  </select>
+</div>
+<%
+=end%>
+
