add views and database

--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -25,8 +25,14 @@
     font-size: 18px;
 }
 
-.pdf-general-infos .gi-title {
+.pdf-title {
   text-align: center;
   font-weight: 500;
   font-size: 26px;
+}
+
+.pdf-subtitle {
+  text-align: center;
+  font-weight: 500;
+  font-size: 18px;
 }
