--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -1,4 +1,6 @@
 <%= link_to "Créer un nouveau PPSP", new_ppsp_path %>
+<%= link_to "Modifier les bases de données", database_path %>
+
 
 <h1>Mes anciens PPSP</h1>
 <% @ppsps.each do |ppsp| %>
