--- a/app/assets/stylesheets/components/_pdf.scss
+++ b/app/assets/stylesheets/components/_pdf.scss
@@ -32,7 +32,7 @@
     font-size: 18px;
 }
 
-// Infos générales
+// Titres
 
 .pdf-title {
   text-align: center;
@@ -43,5 +43,11 @@
 .pdf-subtitle {
   text-align: center;
   font-weight: 500;
+  font-size: 22px;
+}
+
+.pdf-subsubtitle {
+  text-align: center;
+  font-weight: 400;
   font-size: 18px;
 }
