Create view, controllers for the database + parse hospitals

--- a/app/views/deminings/new.html.erb
+++ b/app/views/deminings/new.html.erb
@@ -1,6 +1,1 @@
-<%= simple_form_for @demining do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
