--- a/app/views/pension_insurances/new.html.erb
+++ b/app/views/pension_insurances/new.html.erb
@@ -1,6 +1,1 @@
-<%= simple_form_for @pension_insurance do |f| %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.input :fax %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
