--- a/app/views/regional_committees/new.html.erb
+++ b/app/views/regional_committees/new.html.erb
@@ -1,7 +1,1 @@
-<%= simple_form_for @regional_committee do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.input :fax %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
