--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,1 +1,7 @@
-<%= @companies %>
+<% @companies.each do |company| %>
+  <div class="card-database">
+    <%= link_to company, company_path(company) %>
+    <%= link_to "Edit", edit_company_path(company) %>
+    <%= link_to "x", company_path(company), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+  </div>
+<% end %>
