--- a/app/views/hospitals/new.html.erb
+++ b/app/views/hospitals/new.html.erb
@@ -1,6 +1,1 @@
-<%= simple_form_for @hospital do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
