--- a/app/views/moas/index.html.erb
+++ b/app/views/moas/index.html.erb
@@ -1,1 +1,7 @@
-<%= @moas %>
+<% @moas.each do |moa| %>
+  <div class="card-database">
+    <%= link_to moa, moa_path(moa) %>
+    <%= link_to "Edit", edit_moa_path(moa) %>
+    <%= link_to "x", moa_path(moa), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+  </div>
+<% end %>
