--- a/app/views/project_informations/index.html.erb
+++ b/app/views/project_informations/index.html.erb
@@ -1,1 +1,7 @@
-<%= @project_informations %>
+<% @project_informations.each do |project_information| %>
+  <div class="card-database">
+    <%= link_to project_information, project_information_path(project_information) %>
+    <%= link_to "Edit", edit_project_information_path(project_information) %>
+    <%= link_to "x", project_information_path(project_information), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+  </div>
+<% end %>
