--- a/app/views/subcontractors/new.html.erb
+++ b/app/views/subcontractors/new.html.erb
@@ -1,6 +1,1 @@
-<%= simple_form_for @subcontractor do |f| %>
-  <%= f.input :name, label: "Nom" %>
-  <%= f.input :address, label: "Adresse"  %>
-  <%= f.input :work, label: "Travail"  %>
-  <%= f.input :sub_responsible_id, label: "Responsable", as: :select, collection: SubResponsible.all.order(:name)  %>
-<% end %>
+<%= render 'form' %>
