--- a/app/views/ppsps/informations_supplementaires.html.erb
+++ b/app/views/ppsps/informations_supplementaires.html.erb
@@ -5,11 +5,11 @@
 
 <div class="selected_active">
   <% @selected_installation_active.each do |select_installation| %>
-    <div class="card-selected">
-      <div class="card-name">
+    <div class="card-info-selected">
+      <div class="card-info-name">
         <%= select_installation.site_installation.name %>
       </div>
-      <div class="btn-delete">
+      <div class="card-btn-delete">
         <%= link_to "x",  ppsp_selected_installation_path(select_installation.ppsp.id, select_installation.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
       </div>
     </div>
@@ -23,11 +23,11 @@
 
 <div class="selected_active">
   <% @selected_altitude_active.each do |select_altitude| %>
-    <div class="card-selected">
-      <div class="card-name">
+    <div class="card-info-selected">
+      <div class="card-info-name">
         <%= select_altitude.altitude_work.name %>
       </div>
-      <div class="btn-delete">
+      <div class="card-btn-delete">
         <%= link_to "x",  ppsp_selected_altitude_path(select_altitude.ppsp.id, select_altitude.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
       </div>
     </div>
@@ -41,12 +41,52 @@
 
 <div class="selected_active">
   <% @selected_risk_active.each do |select_risk| %>
-    <div class="card-selected">
-      <div class="card-name">
+    <div class="card-info-selected">
+      <div class="card-info-name">
         <%= select_risk.risk.name %>
       </div>
-      <div class="btn-delete">
+      <div class="card-btn-delete">
         <%= link_to "x",  ppsp_selected_risk_path(select_risk.ppsp.id, select_risk.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalSubcontractor">
+  Ajouter un sous-traitant
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="ModalSubcontractor" tabindex="-1" role="dialog" aria-labelledby="ModalSubcontractor" aria-hidden="true">
+  <%= render 'modal_subcontractor' %>
+</div>
+
+
+<div class="selected_active">
+  <% @selected_subcontractor_active.each do |select_subcontract| %>
+    <div class="card-info-selected">
+      <div class="card-info-body">
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.name %>
+        </div>
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.address %>
+        </div>
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.work %>
+        </div>
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.responsible_name %>
+        </div>
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.responsible_phone %>
+        </div>
+        <div class="card-info-name">
+          <%= select_subcontract.subcontractor.responsible_email %>
+        </div>
+      </div>
+      <div class="card-btn-delete">
+        <%= link_to "x",  ppsp_selected_subcontractor_path(select_subcontract.ppsp.id, select_subcontract.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
       </div>
     </div>
   <% end %>
