--- a/app/views/ppsps/show.html.erb
+++ b/app/views/ppsps/show.html.erb
@@ -371,7 +371,7 @@
     <% if @ppsp.risks %>
       <div class="pdf-risk">
         <div class="pdf-title">
-          Risque
+          Risques
         </div>
         <% @ppsp.risks.each do |risk| %>
           <div class="risk-name">
